# mkdocs-drawio

./: .gitignore  README.md  pyproject.toml
mkdocs_drawio/: plugin.py
mkdocs_drawio/css/: drawio.css
mkdocs_drawio/js/: drawio.js  viewer-static.min.js
