[tool.poetry]
name = "mkdocs-drawio"
version = "0.0.0"  # ignored when using dynamic versioning
description = "MkDocs plugin for embedding Drawio files"
authors = [
    "Jan Larwig <jan@larwig.com>",
    "Sergey Lukin <onixpro@gmail.com>",
    "Yves Chevallier <yves.chevallier@heig-vd.ch>",
    "Merijn Weiss <merijn.weiss@gmail.com>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tuunit/mkdocs-drawio/"
homepage = "https://github.com/tuunit/mkdocs-drawio/"
keywords = [
    "mkdocs", "plugin", "markdown", "drawio"
]
packages = [
    { include = "mkdocs_drawio" },
]

include = [
  { path = "mkdocs_drawio/css", format = "sdist" },
  { path = "mkdocs_drawio/js", format = "sdist" },
  { path = "mkdocs_drawio/fonts", format = "sdist" },
]

[tool.poetry.urls]
"Documentation" = "https://github.com/tuunit/mkdocs-drawio/"
"Source" = "https://github.com/tuunit/mkdocs-drawio/"
"Tracker" = "https://github.com/tuunit/mkdocs-drawio/issues"

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
beautifulsoup4 = ">=4.0"
lxml = ">=4.0"
mkdocs = ">=1.3"

[tool.poetry.group.dev.dependencies]
python = ">=3.8.0,<4.0"
black = ">=24.0"
ruff = "^0.9.2"
mkdocs-print-site-plugin = "^2.6.0"
mkdocs-material = "^9.5.50"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
strip-prefix = "v"
metadata = true
tag-pattern = '^v?(?P<version>\d+\.\d+\.\d+(?:\+[a-zA-Z0-9.-]+)?)$'

[tool.poetry.plugins."mkdocs.plugins"]
drawio = 'mkdocs_drawio.plugin:DrawioPlugin'

[tool.setuptools.packages.find]
include = ["mkdocs_drawio*"]
exclude = ["example*"]
